--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="project-card">
-                <img class="project-image" src="coming soon.png" alt="Coming Soon Image" />
+                <img class="project-image" src="coming soon.png" alt="Weather Dashboard Image" />
                 <h3>Project Four</h3>
                 <p class="subtext">My Fourth Project..
                     .</p>
