update fourth projrct link

--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
             <div class="project-card">
                 <img class="project-image" src="coming soon.png" alt="Weather Dashboard Image" />
                 <h3>Project Four</h3>
-                <p class="subtext">My Fourth Project..
-                    .</p>
+                <p class="subtext">My Fourth Project...</p>
                 <hr />
-                <p class="subtext"><a class="project-link" href="">View here</a></p>
+                <p class="subtext"><a class="project-link" href="https://jos23867.github.io/Weather/">View here</a></p>
             </div>
         </div>
     </section>
